baseStylesheet.css
html, body {
    margin: 0;
    padding: 0;
    background-image: url(media/gradientBackground.jpg);
}

img.giles-logo {
    height: 85px;
    display: inline-block;
    position: fixed;
    top: 40px;
    left: 10px;
}

img.premag-logo {
    height: 75px;
    display: inline-block;
    position: fixed;
    top: 45px;
    right: 10px;
}

img.redline {
    width: 350px;
    display: inline-block;
    position: fixed;
    top: 95px;
    left: 50%;
    margin-left: -175px;
}

img.isLogo {
    width: 200px;
    position: fixed;
    bottom: 5px;
    left: 50%;
    margin-left: -100px;
}

h1, p, a, th, td, h2 {
    font-family: 'Roboto', sans-serif;
    text-decoration: none;
}

h3, p {
    text-align: center;
    color: white;
    color: white;
}

p.manufacturing, h3.manufacturing {
    text-align: center;
    font-weight: bold;
    margin-top: -15px;
    font-size: 20px;
    color: rgb(51, 141, 244);
}

p.manufacturing2 {
    text-align: center;
}

.safety {
    text-align: center;
    font-size: 25px;
    color: red;
    margin: -10px 0
}

h2 {
    color: rgba(255, 255, 255, 0.5);
}

th {
    color: white;
    text-shadow: 2px 4px 15px rgba(0, 0, 0, 0.3);
    font-size: 20px;
    padding-top: 5px;
    border: 1px solid rgba(34, 100, 176, 0.8); 
    border-width: medium;
    background-color: rgba(34, 100, 176, 0.8);
}

tr {
    color: white;
}

div.file-container {
    border-top: 1px solid rgba(34, 100, 176, 0.8);
    border-bottom: 1px solid rgba(34, 100, 176, 0.8);
    position: fixed;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    top: 175px;
    bottom: 70px;
    padding: 10px 0;
}

div.files-folders {
    width: 90%;
    margin: 0 auto;
    display: block;
}

h1 {
    text-shadow: 2px 4px 15px rgba(0, 0, 0, 0.5);
    margin-top: -25px;
    margin-bottom: 20px;
    font-size: 55px;
    color: white;
    padding-top: 50px;
    text-align: center;
}

div.buttons {
    margin: 0 auto;
    display: block;
    width: auto;
    height: 30px;
    margin-top: 0px;
}

div.button-container {
    width: 547px;
    height: 50px;
    display: block;
    margin: 0 auto;
}

#searchform {
    display: inline-block;
    float: left;
}

input.searchBar {
    width: 200px;
    border: 1px solid black;
    font-size: 24px;
    color: rgba(255, 255, 255, 0.5);
   /* border: solid 1px white; */
    margin: 0 7px;
    padding: 7px 10px;
    display:inline-block;
    float: left;
    background-color: rgba(0, 0, 0, 0.5);
    -o-transition:.3s;
    -ms-transition:.3s;
    -moz-transition:.3s;
    -webkit-transition:.3s;
}

a.button, input.searchButton {
    border: 1px solid black;
    font-size: 24px;
    color: white;
   /* border: solid 1px white; */
    margin: 0 7px;
    padding: 7px 15px;
    display:inline-block;
    float: left;
    background-color: rgba(0, 0, 0, 0.5);
    -o-transition:.3s;
    -ms-transition:.3s;
    -moz-transition:.3s;
    -webkit-transition:.3s;
}

a.button:hover, input.searchButton:hover {
    border: 1px solid rgba(97, 97, 97, 1);
    color: rgba(97, 97, 97, 1);
  /*  border: solid 1px rgba(97, 97, 97, 1); */
    -o-transition:.3s;
    -ms-transition:.3s;
    -moz-transition:.3s;
    -webkit-transition:.3s;
}

a.folder, a.file {
    border-radius: 3px;
    color: white;
    font-size: 20px;
    display: block;
    -o-transition:.3s;
    -ms-transition:.3s;
    -moz-transition:.3s;
    -webkit-transition:.3s;
}

a.folder:hover, a.file:hover {
    border-radius: 3px;
    color: rgba(97, 97, 97, 1);
}

div.folders {
    overflow-y:auto;
    height: 100%;
    margin-bottom: -20px;
    margin-top: -10px;
    border-right: 1px solid rgba(34, 100, 176, 0.8);
    padding: 10px 1%;
    float: left;
    width: 20%;
}

div.files {
    height: 100%;
    overflow-y:auto;
    padding: 0;
    margin: 0;
    float: right;
    width: 75%;
    padding-right: 1%;
}

div.folder { 
    padding-left: 5px;
    margin-top: 2px;
    margin-right: 5px;
    margin-bottom: -2px;
    background-image: url(media/folder-small.png);
    background-repeat: no-repeat;
    background-size: 100%;
    width: 20px;
    height: 20px;
    display:inline-block;
}

div.file {
    padding: 0;
    margin: 0 5px -2px 0;
    background-image: url(media/document-small.png);
    background-repeat: no-repeat;
    background-size: 100%;
    width: 19px;
    height: 25px;
    display:inline-block;
}

th.fixedHeader {
    display: table-header-group;
}

tr.files {
    -o-transition:.3s;
    -ms-transition:.3s;
    -moz-transition:.3s;
    -webkit-transition:.3s;
}

tr.files:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

td {
   padding: 2px;
}

td.revNum, td.effDate {
    text-align: center;
    font-size: 20px;
}

td.docNum, td.effDate {
    white-space: nowrap;
}

td.decription {
    width: 100px;
}

table {
    table-layout: auto;
    width: 100%;
}

/* Scrollbar */
::-webkit-scrollbar {
    width: 12px;
}
 
/* Track */
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7); 
    -webkit-border-radius: 0px;
    border-radius: 0px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 0px;
    background: rgba(34, 100, 176, 0.8); 
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}
::-webkit-scrollbar-thumb:window-inactive {
	background: rgba(34, 100, 176, 0.3);
}

@media only screen and (max-width: 840px) {
    
    h1 {
        color: yellow;
        font-size: 35px;
    }
    
    img.redline {
        top: 70px;
    }
    
    a.button {
        font-size: 20px;
        text-align: center;
        width: 55px;
    }
    
    div.button-container {
        width: 440px;
        margin: 0 auto;
    }
    
    form {
        width: 230px;
    }
    
    input.searchBar {
        width: 100px;
        font-size: 20px;
    }
    
    input.searchButton {
        font-size: 20px;
    }
    
    img.premag-logo, img.giles-logo{
        display:none;
    }
    
    div.file-container {
        margin-top: -33px;
    }
    
    div.files-folders {
       width: 100%;
       height: auto;
    }
    
    div.folders {
        width: 100%; 
        height: auto;
        max-height: 200px;
        overflow-y: auto;
        margin-bottom: 20px;
        border: none;
    }
    
    a.folder {
        font-size: 30px;
    }
    
    div.folder {
        background-size: 100%;
        width: 30px;
        height: 30px;
        margin-right: 7px;
    }
    
    div.files {
        
    }
    
    a.file {
        font-size: 35px;
    }
    
    div.file {
        margin-top: 5px;
        background-size: 100%;
        width: 25px;
        height: 35px;
        margin-right: 7px;
    }
    
    th, td.docNum, td.revNum, td.effDate {
        font-size: 35px;
    }
    
    td.description {
        font-size: 30px;
    }
    
    td {
        padding: 0 10px;
    }
}

/* this is CSS for smallest screens (phone) */
@media only screen and (max-width: 545px) {
    h1 {
        color: red;
    }
    img.premag-logo, img.giles-logo, img.islogo {
        display: none;
    }
    
    div.file-container {
        bottom: 1%;
    }
    
    div.files-folders {
        width: 100%;
        height: auto;
    }
    
    div.folders {
        width: 100%; 
        height: auto;
        max-height: 200px;
        overflow-y: auto;
        margin-bottom: 20px;
        border: none;
    }
    
    a.folder {
        font-size: 30px;
        margin: 5px 0;
    }
    
    div.folder {
        background-size: 100%;
        width: 30px;
        height: 30px;
        margin-right: 7px;
    }
    
    div.files {
        margin-top: -25px;
        width: 100%;
        border: 1px solid rgba(34, 100, 176, 0.8);
        height: 82%;
    }
    
    table {
        margin-top: -5px;
        padding: 0;
    }
    
    table tbody, table thead {
        display: block;
    }
    
    table tbody {
       overflow: auto;
       height: 420px;
    }
    
    th, td {
        padding: 0;
        margin: 0;
        min-width: 350px;
    }
    
    a.file {
        font-size: 25px;
    }
    
    div.file {
        margin-top: 5px;
        background-size: 100%;
        width: 25px;
        height: 35px;
        margin-right: 7px;
    }
    
    th, td.docNum, td.revNum, td.effDate {
        font-size: 25px;
        padding: 0;
        margin: 0;
    }
    
    td.revNum, th.revNum, td.effDate, th.effDate {
        min-width: 150px;
    }
    
    td.description {
        font-size: 20px;
    }
    
    td {
        padding: 0 10px;
    }
    
}

